# breakout-agent-arena

./: .gitignore  README.md  mlp_model.pt  pyproject.toml  requirements.txt  run_stage1.py  scaler.json  start.py
docs/: README.md  architecture.md  llm_history.md  neural_history.md  stage-1-manual-sandbox.md  stage-2-mathematical-agent.md  stage-2-mathematical-controller.md  stage-3-neural-network-agent.md  stage-3-neural-network-controller.md  stage-4-llm-agent.md  vhal.md
scripts/: collect_training_data.py  evaluate_maps.py  train_mlp_model.py
src/breakout/: __main__.py  config.py
src/breakout/app/: __init__.py  game.py  renderer.py  state.py
src/breakout/controllers/: llm.py  neural.py
src/breakout/gameplay/: __init__.py  collisions.py  entities.py
src/breakout/tools/: aim_predictor.py  trajectory_predictor.py
src/breakout/training/: data_logger.py  mlp_model.py
src/breakout_vhal/: __init__.py  __main__.py  agent.py  config.py  data_logger.py  game.py  mlp_model.py  neural_agent.py  vhal.py
src/breakout_vhal/app/: game.py  renderer.py  state.py  time_utils.py
src/breakout_vhal/controllers/: __init__.py  llm.py  manual.py  mathematical.py
src/breakout_vhal/gameplay/: collisions.py
src/breakout_vhal/hardware/: __init__.py
src/breakout_vhal/training/: __init__.py
