[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "breakout"
version = "0.1.0"
description = "Breakout sandbox constrained by a virtual hardware abstraction layer."
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.6,<3",
    "numpy>=1.26,<3",
    "torch>=2.2,<3",
]

[tool.setuptools.packages.find]
where = ["src"]
